tests/fail/106-fail-as-str-on-non-string-base.rs
use df_derive::ToDataFrame;
#[path = "../common.rs"]
mod core;

#[derive(ToDataFrame)]
struct Bad {
    #[df_derive(as_str)]
    not_a_string: f64,
}

fn main() {}
